Mobile footer edited to fit on one line

--- a/css/main.css
+++ b/css/main.css
@@ -161,6 +161,11 @@ footer {
 	align-items: center;
 	flex-flow: column wrap;
 }
+
+footer h3 {
+	white-space: nowrap;
+}
+
 footer span {
 	font-family: 'Galada', cursive;
 	text-transform: lowercase;
